<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="241dp"
        android:layout_height="60dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/Title"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/PWtext"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="332dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/IDtext"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="272dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/Porttext"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="202dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Porttextbar"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/IPtext"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="132dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butten"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="403dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/IDtextbar"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="272dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/IPtextbar"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="132dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="332dp" />

</androidx.constraintlayout.widget.ConstraintLayout>